# theft-preventer

./: .env  Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yml
app/: settings.gradle.kts
app/app/: build.gradle.kts
app/app/src/androidTest/java/com/theft_preventer/app/: ExampleInstrumentedTest.kt
app/app/src/main/: AndroidManifest.xml
app/app/src/main/java/com/theft_preventer/app/: MainActivity.kt  MainApplication.kt
app/app/src/main/java/com/theft_preventer/app/data/local/: SettingsDataStore.kt
app/app/src/main/java/com/theft_preventer/app/di/: AppModule.kt
app/app/src/main/res/values/: strings.xml  themes.xml
app/app/src/test/java/com/theft_preventer/app/: ExampleUnitTest.kt
app/gradle/: libs.versions.toml
app/gradle/wrapper/: gradle-wrapper.properties
esp32/: .gitignore  CMakeLists.txt
esp32/main/: CMakeLists.txt  config.h  device_info.c  device_info.h  http_client.c  http_client.h  main.c  webserver.c  wifi_manager.c  wifi_manager.h
frontend/: package-lock.json  package.json
frontend/src/: App.vue
frontend/src/components/: EventList.vue  LoginForm.vue  Pagination.vue
frontend/src/router/: index.ts
frontend/src/services/: api.ts
frontend/src/store/: index.ts
frontend/src/store/modules/: auth.ts  events.ts
frontend/src/types/: index.ts
frontend/src/views/: LoginView.vue  OverviewView.vue
src/: auth.rs  error.rs  main.rs
src/api/: routes.rs
src/config/: mod.rs
src/db/: mod.rs  models.rs
src/middleware/: logger.rs
src/services/: mod.rs  twilio_service.rs
(+12 files in other folders)
