[package]
name = "theft-preventer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "theft-preventer"
path = "src/main.rs"

[dependencies]
actix-web = { version = "4.9.0" }
actix-files = "0.6.6"
actix-web-httpauth = "0.8.2"
config = "0.14.1"
serde = { version = "1.0.214", features = ["derive"] }
toml = "0.8.19"
futures = "0.3.31"
rusqlite = { version = "0.32.1", features = ["bundled"] }
chrono = "0.4.38"
r2d2 = "0.8"
r2d2_sqlite = "0.25.0"
jsonwebtoken = "9.3.0"
bcrypt = "0.15.1"
serde_json = "1.0.132"